[project]
name = "your_package"
version = "0.1.0"
description = "python utility functions for patch-seq data analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache" }

authors = [
  { name = "Ike Ogbonna", email = "Ike.Ogbonna@ucsf.edu" }
]

# Runtime dependencies (adjust as needed)
dependencies = [
  "numpy~=2.3.1",
  "pandas~=2.2.3",
  "scipy~=1.16.0",
  "matplotlib~=3.10.0",
  "rich~=13.9.4",
]

[project.optional-dependencies]
arrays = [
  "pystackreg~=0.2.8",
  "scikit-image~=0.25.2"
]

files = [
  "bs4~=4.13.5",
  "h5py~=3.13.0",
  "hdf5plugin~=5.1.0",
  "natsort~=8.4.0",
  "numcodecs~=0.14.1",
  "readlif~=0.6.5",
  "tifffile~=2025.2.18",
  "zarr~=2.18.3",
]

torch_utils = [
  "torch~=2.7.1",
  "safetensors~=0.5.3",
  "scikit-learn~=1.6.1",
]

dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
  "your_package[util1,util2]"
]

[project.urls]
Homepage = "https://github.com/ikestar99/cadlabutils"
Repository = "https://github.com/ikestar99/cadlabutils"
Issues = "https://github.com/ikestar99/cadlabutils/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
files = ["src", "tests"]