[project]
name = "cadlabutils"
version = "0.1.0"
description = "python utility functions for patch-seq data analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache" }

authors = [
  { name = "Ike Ogbonna", email = "Ike.Ogbonna@ucsf.edu" }
]

# Runtime dependencies (adjust as needed)
dependencies = [
  "numpy",
  "pandas",
  "psutil",
  "pympler",
  "pyarrow",
  "matplotlib",
  "rich",
  "scipy",
]

[project.optional-dependencies]
arrays = [
  "pystackreg",
  "scikit-image"
]

files = [
  "bs4",
  "PyYAML",
  "h5py~=3.13.0",
  "hdf5plugin~=5.1.0",
  "natsort",
  "numcodecs~=0.14.1",
  "readlif",
  "requests",
  "tifffile",
  "zarr~=2.18.3",
]

ml = [
  "optuna",
  "torch>=2.7.1",
  "safetensors~=0.5.3",
  "scikit-learn~=1.6.1",
]

dev = [
  "cadlabutils[arrays,files,ml]"
]

[project.urls]
Homepage = "https://github.com/ikestar99/cadlabutils"
Repository = "https://github.com/ikestar99/cadlabutils"
Issues = "https://github.com/ikestar99/cadlabutils/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.13.5"
strict = true
files = ["src", "tests"]